CSS bordea gehitu

--- a/static/pages/home.html
+++ b/static/pages/home.html
@@ -53,8 +53,8 @@
                                                     <td>
                                                         <table class="azkentabla">
                                                             <tbody>
-                                                            <tr ng-repeat="orden in turnos.ordenes" ng-if="turnos.turno==1" style="border:1px solid #ccc">
-                                                                <td style="background-color: {{ users | searchByRefBackcolor : 'ref' : orden.ref }} !important; color:{{ users | searchByRefForecolor : 'ref' : orden.ref }} !important;" tooltip="{{arraton}}">
+                                                            <tr ng-repeat="orden in turnos.ordenes" ng-if="turnos.turno==1" style="border:1px solid #000000">
+                                                                <td style="padding:3px;background-color: {{ users | searchByRefBackcolor : 'ref' : orden.ref }} !important; color:{{ users | searchByRefForecolor : 'ref' : orden.ref }} !important;" tooltip="{{arraton}}">
                                                                     <span ng-style="set_color('{{ users | searchByRefForecolor : 'ref' : orden.ref }}')" data-miid="{{ egunak._id }}"
                                                                             data-fetxa="{{egunak.fetxa}}"
                                                                             data-turno="1"
@@ -95,8 +95,8 @@
                                                     <td>
                                                         <table class="azkentabla">
                                                             <tbody>
-                                                            <tr ng-repeat="orden in turnos.ordenes" ng-if="turnos.turno==2" style="border:1px solid #ccc">
-                                                                <td style="background-color: {{ users | searchByRefBackcolor : 'ref' : orden.ref }} !important; color:{{ users | searchByRefForecolor : 'ref' : orden.ref }} !important;" tooltip="{{arraton}}">
+                                                            <tr ng-repeat="orden in turnos.ordenes" ng-if="turnos.turno==2" style="border:1px solid #000000">
+                                                                <td style="padding:3px;background-color: {{ users | searchByRefBackcolor : 'ref' : orden.ref }} !important; color:{{ users | searchByRefForecolor : 'ref' : orden.ref }} !important;" tooltip="{{arraton}}">
                                                                         <!--<span ng-style="{color:{{ users | searchByRefForecolor : 'ref' : orden.ref }} !important; }" data-miid="{{ egunak._id }}"-->
                                                                         <span ng-style="set_color('{{ users | searchByRefForecolor : 'ref' : orden.ref }}')" data-miid="{{ egunak._id }}"
                                                                               data-fetxa="{{egunak.fetxa}}"
@@ -140,8 +140,8 @@
                                                     <td>
                                                         <table class="azkentabla">
                                                             <tbody>
-                                                            <tr ng-repeat="orden in turnos.ordenes" ng-if="turnos.turno==3" style="border:1px solid #ccc">
-                                                                <td style="background-color: {{ users | searchByRefBackcolor : 'ref' : orden.ref }} !important; color:{{ users | searchByRefForecolor : 'ref' : orden.ref }} !important;" tooltip="{{arraton}}">
+                                                            <tr ng-repeat="orden in turnos.ordenes" ng-if="turnos.turno==3" style="border:1px solid #000000">
+                                                                <td style="padding:3px;background-color: {{ users | searchByRefBackcolor : 'ref' : orden.ref }} !important; color:{{ users | searchByRefForecolor : 'ref' : orden.ref }} !important;" tooltip="{{arraton}}">
 
                                                                         <span ng-style="set_color('{{ users | searchByRefForecolor : 'ref' : orden.ref }}')" data-miid="{{ egunak._id }}"
                                                                               data-fetxa="{{egunak.fetxa}}"
@@ -204,8 +204,8 @@
                                                 <td>
                                                     <table class="azkentabla">
                                                         <tbody>
-                                                        <tr ng-repeat="orden in turnos.ordenes" ng-if="turnos.turno==1" style="border:1px solid #ccc">
-                                                            <td style="background-color: {{ users | searchByRefBackcolor : 'ref' : orden.ref }} !important; color:{{ users | searchByRefForecolor : 'ref' : orden.ref }} !important;" tooltip="{{arraton}}">
+                                                        <tr ng-repeat="orden in turnos.ordenes" ng-if="turnos.turno==1" style="border:1px solid #000000">
+                                                            <td style="padding:3px;background-color: {{ users | searchByRefBackcolor : 'ref' : orden.ref }} !important; color:{{ users | searchByRefForecolor : 'ref' : orden.ref }} !important;" tooltip="{{arraton}}">
 
                                                                     <span ng-style="set_color('{{ users | searchByRefForecolor : 'ref' : orden.ref }}')" data-miid="{{ egunak._id }}"
                                                                           data-fetxa="{{egunak.fetxa}}"
@@ -250,8 +250,8 @@
                                                 <td>
                                                     <table class="azkentabla">
                                                         <tbody>
-                                                        <tr ng-repeat="orden in turnos.ordenes" ng-if="turnos.turno==2" style="border:1px solid #ccc">
-                                                            <td  style="background-color: {{ users | searchByRefBackcolor : 'ref' : orden.ref }} !important; color:{{ users | searchByRefForecolor : 'ref' : orden.ref }} !important;" tooltip="{{arraton}}">
+                                                        <tr ng-repeat="orden in turnos.ordenes" ng-if="turnos.turno==2" style="border:1px solid #000000">
+                                                            <td  style=padding:3px;"background-color: {{ users | searchByRefBackcolor : 'ref' : orden.ref }} !important; color:{{ users | searchByRefForecolor : 'ref' : orden.ref }} !important;" tooltip="{{arraton}}">
 
                                                                     <span ng-style="set_color('{{ users | searchByRefForecolor : 'ref' : orden.ref }}')" data-miid="{{ egunak._id }}"
                                                                           data-fetxa="{{egunak.fetxa}}"
@@ -296,8 +296,8 @@
                                                 <td>
                                                     <table class="azkentabla">
                                                         <tbody>
-                                                        <tr ng-repeat="orden in turnos.ordenes" ng-if="turnos.turno==3" style="border:1px solid #ccc">
-                                                            <td style="background-color: {{ users | searchByRefBackcolor : 'ref' : orden.ref }} !important; color:{{ users | searchByRefForecolor : 'ref' : orden.ref }} !important;" tooltip="{{arraton}}">
+                                                        <tr ng-repeat="orden in turnos.ordenes" ng-if="turnos.turno==3" style="border:1px solid #000000">
+                                                            <td style="padding:3px;background-color: {{ users | searchByRefBackcolor : 'ref' : orden.ref }} !important; color:{{ users | searchByRefForecolor : 'ref' : orden.ref }} !important;" tooltip="{{arraton}}">
 
                                                                     <span ng-style="set_color('{{ users | searchByRefForecolor : 'ref' : orden.ref }}')" data-miid="{{ egunak._id }}"
                                                                           data-fetxa="{{egunak.fetxa}}"
