--- a/static/pages/home.html
+++ b/static/pages/home.html
@@ -363,5 +363,7 @@
 </div>
 
 <div class="row" style="display: visible;">
+    {{ charData }}
     <highchart id="chart1" config="chartConfig" class="span10"></highchart>
+    }
 </div>
