--- a/static/pages/home.html
+++ b/static/pages/home.html
@@ -62,13 +62,13 @@
                                                                             editable-text="orden.ref"
                                                                             e-form="textBtnForm" ng-dblclick="textBtnForm.$show()"
                                                                             ng-mouseenter="arraton(orden.ref)"
-                                                                            ng-click="grafikoa()"
+                                                                            ng-click="grafikoa(orden.ref)"
                                                                             ng-if="isadmin"
                                                                             ng-bind-html="orden.ref"
                                                                             onbeforesave="updateUser($data, this)">{{ orden.ref }}</span>
                                                                     <span ng-style="set_color('{{ users | searchByRefForecolor : 'ref' : orden.ref }}')" data-miid="{{ egunak._id }}"
                                                                           ng-if="!isadmin"
-                                                                          ng-click="grafikoa()"
+                                                                          ng-click="grafikoa(orden.ref)"
                                                                           ng-bind-html="orden.ref"
                                                                           >{{ orden.ref }}</span>
                                                                 </td>
@@ -105,13 +105,13 @@
                                                                               editable-text="orden.ref"
                                                                               e-form="textBtnForm" ng-dblclick="textBtnForm.$show()"
                                                                               ng-mouseenter="arraton(orden.ref)"
-                                                                              ng-click="grafikoa()"
+                                                                              ng-click="grafikoa(orden.ref)"
                                                                               ng-if="isadmin"
                                                                               ng-bind-html="orden.ref"
                                                                               onbeforesave="updateUser($data, this)">{{ orden.ref }}</span>
                                                                         <span ng-style="set_color('{{ users | searchByRefForecolor : 'ref' : orden.ref }}')" data-miid="{{ egunak._id }}"
                                                                           ng-if="!isadmin"
-                                                                          ng-click="grafikoa()"
+                                                                          ng-click="grafikoa(orden.ref)"
                                                                           ng-bind-html="orden.ref"
                                                                           >{{ orden.ref }}</span>
 
@@ -150,13 +150,13 @@
                                                                               editable-text="orden.ref"
                                                                               e-form="textBtnForm" ng-dblclick="textBtnForm.$show()"
                                                                               ng-mouseenter="arraton(orden.ref)"
-                                                                              ng-click="grafikoa()"
+                                                                              ng-click="grafikoa(orden.ref)"
                                                                               ng-if="isadmin"
                                                                               ng-bind-html="orden.ref"
                                                                               onbeforesave="updateUser($data, this)">{{ orden.ref }}</span>
                                                                         <span ng-style="set_color('{{ users | searchByRefForecolor : 'ref' : orden.ref }}')" data-miid="{{ egunak._id }}"
                                                                           ng-if="!isadmin"
-                                                                          ng-click="grafikoa()"
+                                                                          ng-click="grafikoa(orden.ref)"
                                                                           ng-bind-html="orden.ref"
                                                                           >{{ orden.ref }}</span>
 
@@ -214,14 +214,14 @@
                                                                           editable-text="orden.ref"
                                                                           e-form="textBtnForm" ng-dblclick="textBtnForm.$show()"
                                                                           ng-mouseenter="arraton(orden.ref)"
-                                                                          ng-click="grafikoa()"
+                                                                          ng-click="grafikoa(orden.ref)"
                                                                             ng-if="isadmin"
                                                                           ng-bind-html="orden.ref"
                                                                           onbeforesave="updateUser($data, this)">{{ orden.ref  }}</span>
                                                                 <!--<span ng-bind-html="orden.ref"></span>-->
                                                                     <span ng-style="set_color('{{ users | searchByRefForecolor : 'ref' : orden.ref }}')" data-miid="{{ egunak._id }}"
                                                                           ng-if="!isadmin"
-                                                                          ng-click="grafikoa()"
+                                                                          ng-click="grafikoa(orden.ref)"
                                                                           ng-bind-html="orden.ref"
                                                                           >{{ orden.ref }}</span>
 
@@ -260,14 +260,14 @@
                                                                           editable-text="orden.ref"
                                                                           e-form="textBtnForm" ng-dblclick="textBtnForm.$show()"
                                                                           ng-mouseenter="arraton(orden.ref)"
-                                                                          ng-click="grafikoa()"
+                                                                          ng-click="grafikoa(orden.ref)"
                                                                             ng-if="isadmin"
                                                                           ng-bind-html="orden.ref"
                                                                           onbeforesave="updateUser($data, this)">{{ orden.ref }}</span>
 
                                                                     <span ng-style="set_color('{{ users | searchByRefForecolor : 'ref' : orden.ref }}')" data-miid="{{ egunak._id }}"
                                                                           ng-if="!isadmin"
-                                                                          ng-click="grafikoa()"
+                                                                          ng-click="grafikoa(orden.ref)"
                                                                           ng-bind-html="orden.ref"
                                                                           >{{ orden.ref }}</span>
 
@@ -306,14 +306,14 @@
                                                                           editable-text="orden.ref"
                                                                           e-form="textBtnForm" ng-dblclick="textBtnForm.$show()"
                                                                           ng-mouseenter="arraton(orden.ref)"
-                                                                          ng-click="grafikoa()"
+                                                                          ng-click="grafikoa(orden.ref)"
                                                                             ng-if="isadmin"
                                                                           ng-bind-html="orden.ref"
                                                                           onbeforesave="updateUser($data, this)">{{ orden.ref }}</span>
 
                                                                     <span ng-style="set_color('{{ users | searchByRefForecolor : 'ref' : orden.ref }}')" data-miid="{{ egunak._id }}"
                                                                           ng-if="!isadmin"
-                                                                          ng-click="grafikoa()"
+                                                                          ng-click="grafikoa(orden.ref)"
                                                                           ng-bind-html="orden.ref"
                                                                           >{{ orden.ref }}</span>
 
