Fix Linea 2, columna 2 border

--- a/static/pages/home.html
+++ b/static/pages/home.html
@@ -159,7 +159,6 @@
                                                                           ng-click="grafikoa(orden.ref)"
                                                                           ng-bind-html="orden.ref"
                                                                           >{{ orden.ref }}</span>
-
                                                                 </td>
                                                             </tr>
                                                             <!--<tr><td ng-if="turnos.turno==3">+</td></tr>-->
@@ -181,7 +180,6 @@
                                         </td>
                                     </tr>
                                     <tr>
-
                                     </tr>
                                 </tbody>
                             </table>
@@ -251,7 +249,7 @@
                                                     <table class="azkentabla">
                                                         <tbody>
                                                         <tr ng-repeat="orden in turnos.ordenes" ng-if="turnos.turno==2" style="border:0px solid #000000">
-                                                            <td  style=border:1px solid #000000; padding:3px;"background-color: {{ users | searchByRefBackcolor : 'ref' : orden.ref }} !important; color:{{ users | searchByRefForecolor : 'ref' : orden.ref }} !important;" tooltip="{{arraton}}">
+                                                            <td  style="border:1px solid #000000; padding:3px;background-color: {{ users | searchByRefBackcolor : 'ref' : orden.ref }} !important; color:{{ users | searchByRefForecolor : 'ref' : orden.ref }} !important;" tooltip="{{arraton}}">
 
                                                                     <span ng-style="set_color('{{ users | searchByRefForecolor : 'ref' : orden.ref }}')" data-miid="{{ egunak._id }}"
                                                                           data-fetxa="{{egunak.fetxa}}"
