--- a/static/pages/home.html
+++ b/static/pages/home.html
@@ -14,6 +14,7 @@
               </span>
             </div>
         </div>
+        <span us-spinner spinner-key="spinner-1"></span>
         <div class="col-md-10 scrolla">
             <div id="scroller">
                 <table class="table table-condensed">
